# openslides

./: .gitignore  WORKPLAN-20260401-engine-v3.md  floom.yaml  floom_app.py  pyproject.toml
examples/floom-demo/: demo.html  prompt.md
openslides/: __init__.py  assembler.py  components_v2.py  generator.py  main.py  prompts.py  renderer.py  templates_modern.py  visuals.py
templates/consulting/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html
templates/consumer/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html
templates/warm-tech/: slide-01-title.html  slide-02-market.html  slide-03-problem.html  slide-04-solution.html  slide-06-business.html  slide-07-competition.html  slide-07-traction.html  slide-08-gtm.html  slide-08-team.html  slide-09-ask.html  slide-12-closing.html
tests/: generate_all.py  generate_all_v2.py
